--- a/src/Componants/Header/Header.css
+++ b/src/Componants/Header/Header.css
@@ -2,6 +2,10 @@
     text-align: center;
     padding: 20px 0px;
     border-bottom: 3px solid #808080;
+    position: fixed;
+    width: 80%;
+    z-index: 999;
+    background-color: #fff;
 }
 
 .header a{
