--- a/src/Componants/Home/Home.css
+++ b/src/Componants/Home/Home.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 100px;
 }
 .journey-left h1{
     font-size: 70px;
